<resources>
    <string name="app_name">Managepass</string>
    <!-- Home Page -->
    <string name="home_page_title">Gérer tous les mots de passe</string>
    <string name="home_page_description">Manage Pass est une application moderne de gestion de mots de passe qui permet aux utilisateurs de gérer facilement et en toute sécurité leurs identifiants pour divers sites web</string>
    <string name="home_page_button">Continuer</string>
    <!-- Login Page -->
    <string name="login_page_title">Connectez-vous à votre compte</string>
    <string name="login_page_sous_title">Entrez votre email et votre mot de passe pour vous connecter</string>
    <string name="login_page_label_email">Email</string>
    <string name="login_page_placeholder_email">Loisbecket@gmail.com</string>
    <string name="login_page_label_password">Mot de passe</string>
    <string name="login_page_placeholder_password">********</string>
    <string name="login_forgot_password">Mot de passe oublié ?</string>
    <string name="login_page_button_sign_in">Se connecter</string>
    <string name="text_or">Ou</string>
    <string name="login_page_button_google">Se connecter avec Google</string>
    <string name="login_text_create_account">Vous n\'avez pas de compte ? </string>
    <string name="login_text_signup">Inscrivez-vous</string>
    <!-- Register Page -->
    <string name="register_page_title">S\’inscrire</string>
    <string name="register_page_description">Entrez vos informations pour créer un compte</string>
    <string name="register_label_nom">Nom de famille</string>
    <string name="register_label_prenom">Prénom</string>
    <string name="register_label_password">Définir un mot de passe</string>
    <string name="register_page_button_sign_up">S’inscrire</string>
    <string name="register_page_placeholder_prenom">Prénom</string>
    <string name="register_page_placeholder_nom">Nom</string>
    <string name="register_text_signin_account">Vous avez déjà un compte ? </string>
    <string name="register_text_signin">Se connecter</string>
    <!-- Listing Passwords -->
    <string name="listing_passwords_placeholder_recherche">Rechercher un mot de passe</string>
    <string name="listing_passwords_title">Récemment utilisée</string>

    <!-- Add Password Activity -->
    <string name="add_password_label_site_url">Site URL</string>
    <string name="add_password_placeholder_site_url">Entrez l\'URL</string>
    <string name="add_password_label_username">Nom d\'utilisateur</string>
    <string name="add_password_placeholder_username">Entrez le nom d\'utilisateur</string>
    <string name="add_password_label_email">E-mail</string>
    <string name="add_password_placeholder_email">Entrez l\'adresse e-mail</string>
    <string name="add_password_label_password">Password</string>
    <string name="add_password_placeholder_password">Mot de passe</string>
    <string name="add_password_button_save">Enregistrer</string>
</resources>