<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup" android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="24dp" android:layout_marginRight="24dp"  android:gravity="center_vertical">
    <!-- title -->
    <TextView
        android:id="@+id/register_page_title"
        style="@style/largebold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_page_title"  />
        <!-- description register -->
        <TextView
            android:id="@+id/register_page_description"
            style="@style/xs_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/register_page_description" />
        <!-- Conteneur pour prénom et nom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="23dp">

            <!-- Prénom input -->
            <EditText
                android:id="@+id/register_input_prenom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:hint="@string/register_page_placeholder_prenom"
                android:padding="12dp"
                android:textColorHint="@color/gray_placeholder"
                android:layout_marginEnd="8dp" />

            <!-- Nom input -->
            <EditText
                android:id="@+id/register_input_nom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:hint="@string/register_page_placeholder_nom"
                android:padding="12dp"
                android:textColorHint="@color/gray_placeholder" />
        </LinearLayout>

        <!-- email label -->
        <TextView
            android:id="@+id/register_email_label"
            style="@style/xs_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/login_page_label_email" />
        <!-- email input -->
        <EditText
            android:id="@+id/register_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/login_page_placeholder_email"
            android:padding="12dp"
            android:textColorHint="@color/gray_placeholder" />
        <!-- password label -->
        <TextView
            android:id="@+id/register_password_label"
            style="@style/xs_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="5dp"
            android:text="@string/register_label_password" />
        <!-- password input -->
        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:drawableEnd="@drawable/icon_eye_off"
            android:hint="@string/login_page_placeholder_password"
            android:padding="12dp"
            android:textColorHint="@color/gray_placeholder" />
        <!-- Sign Up Button -->
        <Button
            android:id="@+id/sign_up_button"
            style="@style/s_semibold_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/mauve_pastel"
            android:text="@string/register_page_button_sign_up" />
        <!-- OR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line" />

            <TextView
                style="@style/xs_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_or" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line" />
        </LinearLayout>
        <!-- Google Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_google"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/icon_google" />

            <TextView
                style="@style/s_semibold_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_button_google" />

        </LinearLayout>
        <!-- texte pour rediriger vers la page login -->
        <TextView
            android:id="@+id/text_login"
            style="@style/xs_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/register_text_signin_account"
            android:textColorLink="@color/violet_clair_pastel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>