<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity" android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:layout_marginLeft="24dp" android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/login_page_title"
            style="@style/largebold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page_title" android:layout_marginTop="88dp" android:maxWidth="235dp" />

        <TextView
            android:id="@+id/login_page_sous_title"
            style="@style/xs_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page_sous_title" android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/email_label"
            style="@style/xs_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page_label_email"  android:layout_marginTop="32dp" android:layout_marginBottom="5dp"/>
        <EditText android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Loisbecket@gmail.com" android:textColorHint="@color/gray_placeholder" android:background="@drawable/edit_text_border" android:padding="12dp"/>

        <TextView
            android:id="@+id/password_label"
            style="@style/xs_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page_label_password" android:layout_marginTop="17dp"/>
        <EditText android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="********" android:textColorHint="@color/gray_placeholder" android:background="@drawable/edit_text_border" android:drawableEnd="@drawable/icon_eye_off" android:padding="12dp"/>

        <TextView
            android:id="@+id/forget_text"
            style="@style/xs_Semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textColor="@color/bleu_violet" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:gravity="end"/>
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mauve_pastel" android:text="@string/login_page_button_sign_in" style="@style/s_semibold_white" android:layout_marginBottom="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center_horizontal|center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_or" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>