<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddPasswordActivity">

    <!-- Header avec l'image de profil et le message de bienvenue -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Image du profil -->
        <androidx.cardview.widget.CardView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:cardCornerRadius="100dp">
            <ImageView
                android:id="@+id/user_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/blak_profile_picture_973460" />
        </androidx.cardview.widget.CardView>

        <!-- Message de bienvenue -->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Hello Clara"
            android:textColor="@color/neutral"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical" />
    </LinearLayout>

    <!-- Label et champ pour Site URL -->
    <TextView
        android:id="@+id/label_site_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_password_label_site_url"
        android:textSize="14sp"
        android:textColor="@color/neutral"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/site_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_password_placeholder_site_url"
        android:backgroundTint="@color/gris"
        android:textColor="@color/neutral"
        android:textColorHint="@color/gray_placeholder"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_site_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label et champ pour Nom d'utilisateur -->
    <TextView
        android:id="@+id/label_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_password_label_username"
        android:textSize="14sp"
        android:textColor="@color/neutral"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/site_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_password_placeholder_username"
        android:backgroundTint="@color/gris"
        android:textColor="@color/neutral"
        android:textColorHint="@color/gray_placeholder"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label et champ pour Email -->
    <TextView
        android:id="@+id/label_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_password_label_email"
        android:textSize="14sp"
        android:textColor="@color/neutral"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_password_placeholder_email"
        android:backgroundTint="@color/gris"
        android:textColor="@color/neutral"
        android:textColorHint="@color/gray_placeholder"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label et champ pour Mot de passe -->
    <TextView
        android:id="@+id/label_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_password_label_password"
        android:textSize="14sp"
        android:textColor="@color/neutral"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_password_placeholder_password"
        android:backgroundTint="@color/gris"
        android:textColor="@color/neutral"
        android:textColorHint="@color/gray_placeholder"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton Enregistrer -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_password_button_save"
        android:backgroundTint="@color/bleu_violet"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>