<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Delete_Password">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/neutral_100">
        <LinearLayout
            android:paddingLeft="24dp" android:paddingRight="24dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:cardCornerRadius="100dp" android:background="@color/neutral_800">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/blank_profile_picture_973460" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <!-- SiteURL label -->
        <LinearLayout
            android:paddingLeft="24dp" android:paddingRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/rounded_top_corners" android:gravity="center_vertical">
        <TextView
            android:id="@+id/site_url_label"
            style="@style/s_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/neutral_800"
            android:text="@string/add_password_label_site_url" />
        <EditText
            android:id="@+id/site_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style_bordure"
            android:drawableStart="@drawable/url"
            android:drawablePadding="10dp"
            style="@style/s_medium_grey_neutral"
            android:hint="@string/add_password_placeholder_site_url"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="21dp"
            />
        <!-- UserName -->
        <TextView
            android:id="@+id/add_password_label_username"
            style="@style/s_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/neutral_800"
            android:text="@string/add_password_label_username" />
        <EditText
            android:id="@+id/add_password_placeholder_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style_bordure"
            android:drawableStart="@drawable/user__1_"
            android:drawablePadding="10dp"
            style="@style/s_medium_grey_neutral"
            android:hint="@string/add_password_placeholder_username"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="21dp"
            />
        <!-- Email -->
        <TextView
            android:id="@+id/login_page_label_email"
            style="@style/s_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/neutral_800"
            android:text="@string/login_page_label_email" />
        <EditText
            android:id="@+id/add_password_placeholder_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style_bordure"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="10dp"
            style="@style/s_medium_grey_neutral"
            android:hint="@string/add_password_placeholder_email"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="21dp"
            />
        <!-- Password -->
        <TextView
            android:id="@+id/login_page_label_password"
            style="@style/s_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/neutral_800"
            android:text="@string/login_page_label_password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- Champ de saisie du mot de passe -->
            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style_bordure"
                android:drawableStart="@drawable/password__"
                android:drawablePadding="10dp"
                style="@style/s_medium_grey_neutral"
                android:hint="@string/register_label_password"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="21dp" />

            <!-- Icône cliquable de Refresh-->
            <ImageView
                android:id="@+id/refresh_icone"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/refresh_ccw" />
        </RelativeLayout>
        <!-- Button -->

        <Button
            android:id="@+id/add_password_button_save"
            style="@style/s_semibold_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/mauve_pastel"
            android:text="@string/add_password_button_save" />

        <Button
            android:id="@+id/delete_password_button_delete"
            style="@style/s_semibold_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rouge"
            android:text="@string/delete_password_button_delete"
            android:drawableStart="@drawable/delete"
            />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>